--- a/org.geckoprojects.emf.repository.itest/.project
+++ b/org.geckoprojects.emf.repository.itest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.geckoprojects.emf.repository.tests</name>
+	<name>org.geckoprojects.emf.repository.itest</name>
 	<comment></comment>
 	<projects>
 	</projects>
