--- a/settings.gradle
+++ b/settings.gradle
@@ -3,11 +3,12 @@ pluginManagement {
     id 'biz.aQute.bnd.workspace' version bnd_version
   }
   repositories {
-    maven { url bnd_snapshots }
     mavenCentral()
     gradlePluginPortal()
+    maven { url bnd_snapshots }
   }
 }
 plugins {
   id 'biz.aQute.bnd.workspace'
 }
+rootProject.name = "geckoemf"
