--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
     steps:
     - name: Git Checkout
       uses: actions/checkout@v2
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.6.0
     - name: Gradle Wrapper Validation
       uses: gradle/wrapper-validation-action@v1
     - name: Set up Java ${{ matrix.java }}
