--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -16,6 +16,7 @@ header:
     - 'dist'
     - 'licenses'
     - '**/package-info.java'
+    - '**/packageinfo'
     - '**/module-info.java'
     - '**/*.bnd'
     - '**/*.bndrun'
@@ -24,7 +25,17 @@ header:
     - '**/*.genmodel'
     - '**/*.md'
     - '**/*.MD'
+    - '**/.keep'
+    - '**/*.jetproperties'
+    - '**/*.javajet'
+    - '**/*.javajetinc'
+    - '**/*.properties'
+    - '**/*.maven'
+    - '**/*.html'
+    - '**/*.ftl'
+    - '**/*.basic'
     - '**/.classpath'
+    - 'org.gecko.emf.osgi.codegen/src/org/gecko/emf/osgi/codegen/templates/model/*'
     - 'LICENSE'
     - 'Jenkinsfile'
     - 'NOTICE'
