--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -33,6 +33,7 @@ header:
     - '**/*.maven'
     - '**/*.html'
     - '**/*.ftl'
+    - '**/*.aird'
     - '**/*.basic'
     - '**/.classpath'
     - 'org.gecko.emf.osgi.codegen/src/org/gecko/emf/osgi/codegen/templates/model/*'
