--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ plugins {
 
 sonarqube {
   properties {
-    property "sonar.projectName", "org.gecko.emf.osgi"
-    property "sonar.projectKey", "gecko-org_org.gecko.emf.osgi"
-    property "sonar.organization", "gecko-org"
+    property "sonar.projectName", "Gecko EMF"
+    property "sonar.projectKey", "geckoprojects-org_org.geckoprojects.emf"
+    property "sonar.organization", "geckoprojects-org"
     property "sonar.host.url", "https://sonarcloud.io"
     property "sonar.coverage.jacoco.xmlReportPaths", "${rootDir}/build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
   }
