Oomph Project Setup
Signed-off-by: Mark Hoffmann <m.hoffmann@data-in-motion.biz>

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -19,6 +19,7 @@ header:
     - '**/packageinfo'
     - '**/module-info.java'
     - '**/*.bnd'
+    - '**/*.setup'
     - '**/*.bndrun'
     - '**/*.xml'
     - '**/*.ecore'
