--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -38,6 +38,7 @@ header:
     - '**/*.basic'
     - '**/.classpath'
     - 'org.gecko.emf.osgi.codegen/src/org/gecko/emf/osgi/codegen/templates/model/*'
+    - 'org.gecko.emf.osgi.extender/src/org/gecko/emf/osgi/extender/*'
     - 'LICENSE'
     - 'Jenkinsfile'
     - 'NOTICE'
