--- a/org.gecko.emf.osgi.example.model.extended/.settings/org.eclipse.core.resources.prefs
+++ b/org.gecko.emf.osgi.example.model.extended/.settings/org.eclipse.core.resources.prefs
@@ -6,5 +6,6 @@ encoding//model/extendend.ecore=UTF-8
 encoding//model/extendend.genmodel=UTF-8
 encoding//src/test/component/Example.java=UTF-8
 encoding//test/test/component/ExampleTest.java=UTF-8
+encoding/<project>=UTF-8
 encoding/bnd.bnd=UTF-8
 encoding/launch.bndrun=UTF-8
