Updated guthub build actions
Signed-off-by: Mark Hoffmann <m.hoffmann@data-in-motion.biz>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,19 +27,20 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
-        java: [ 11, 15 ]
+        java: [ 11, 17, 19 ]
         runner: [ 'xvfb-run --auto-servernum {0}' ]
     name: JDK${{ matrix.java }} ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
     - name: Git Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Gradle Wrapper Validation
       uses: gradle/wrapper-validation-action@v1
     - name: Set up Java ${{ matrix.java }}
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
         java-version: ${{ matrix.java }}
+        distribution: temurin
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
     - name: Gradle version
