--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 plugins {
   id "org.sonarqube" version "3.3"
-  id "jacoco" version "0.8.7"
+  id "jacoco"
   id "java"
+}
+
+repositories {
+    mavenCentral()
 }
 
 // Available to customize the build
