--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -1,16 +1,20 @@
 header:
   license:
     spdx-id: EPL-2.0
-    copyright-owner: Data In Motion Consulting GmbH
+    copyright-owner: Contributors to the Eclipse Foundation
     content: |
-      This program and the accompanying materials are made available under the terms of the
-      Eclipse Public License v2.0 which accompanies this distribution, and is available at
-      http://www.eclipse.org/legal/epl-v20.html
-
+      Copyright (c) 2022 Contributors to the Eclipse Foundation.
+      
+      This program and the accompanying materials are made
+      available under the terms of the Eclipse Public License 2.0
+      which is available at https://www.eclipse.org/legal/epl-2.0/
+      SPDX-License-Identifier: EPL-2.0
+      
+      Contributors:
     pattern: |
-      This program and the accompanying materials are made available under the terms of the
-      Eclipse Public License v2.0 which accompanies this distribution, and is available at
-      http://www.eclipse.org/legal/epl-v20.html
+      This program and the accompanying materials are made
+      available under the terms of the Eclipse Public License 2.0
+      which is available at https://www.eclipse.org/legal/epl-2.0/
 
   paths-ignore:
     - 'dist'
