--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -23,6 +23,8 @@ header:
     - '**/package-info.java'
     - '**/packageinfo'
     - '**/module-info.java'
+    - '**/*.log'
+    - '**/*.txt'
     - '**/*.bnd'
     - '**/*.setup'
     - '**/*.bndrun'
