--- a/org.gecko.emf.osgi.codegen/.classpath
+++ b/org.gecko.emf.osgi.codegen/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="src" output="bin" path="src"/>
 	<classpathentry kind="src" output="bin_test" path="test"/>
+	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
