--- a/org.gecko.emf.osgi.bnd.library.workspace/.project
+++ b/org.gecko.emf.osgi.bnd.library.workspace/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.gecko.emf.osgi.bnd.library</name>
+	<name>org.gecko.emf.osgi.bnd.library.workspace</name>
 	<comment></comment>
 	<projects>
 	</projects>
