--- a/settings.gradle
+++ b/settings.gradle
@@ -3,14 +3,19 @@ pluginManagement {
     id 'biz.aQute.bnd.workspace' version bnd_version
   }
   repositories {
+    maven {
+      url = uri(bnd_snapshots)
+      content {
+        snapshotsOnly()
+        includeGroup('biz.aQute.bnd')
+        includeGroup('biz.aQute.bnd.workspace')
+      }
+    }
     mavenCentral()
     gradlePluginPortal()
-    maven { url bnd_snapshots }
+    rootProject.name="org.gecko.emf"
   }
 }
-
 plugins {
   id 'biz.aQute.bnd.workspace'
 }
-
-rootProject.name = "geckoemf"
