--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -39,6 +39,7 @@ header:
     - '**/*.javajetinc'
     - '**/*.properties'
     - '**/*.maven'
+    - '**/*.mvn'
     - '**/*.html'
     - '**/*.ftl'
     - '**/*.aird'
