--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ sonarqube {
     property "sonar.coverage.jacoco.xmlReportPaths", "${rootDir}/build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
     property "sonar.source", "src"
     property "sonar.test", "test"
-    property "sonar.exclusions", "org.gecko.emf.osgi.example.model.basic/**/*.java, org.gecko.emf.osgi.example.model.extended/**/*.java, org.gecko.emf.osgi.example.model.extender/**/*.java, org.gecko.emf.osgi.example.model.manual/**/*.java, org.gecko.emf.osgi.example.model.basic/**/*.java, org.gecko.emf.osgi.bnd.library/**/*.java, org.gecko.emf.osgi.bnd.library.project/**/*.java, org.gecko.emf.osgi.bnd.templates.project/**/*.java, org.gecko.emf.osgi.codegen/**/templates/model/*.java, org.gecko.emf.osgi.itest/**/*.java, org.gecko.emf.osgi.extender.itest/**/*.java"
+    property "sonar.exclusions", "org.gecko.emf.osgi.example.model.basic/**/*.java, org.gecko.emf.osgi.example.model.extended/**/*.java, org.gecko.emf.osgi.example.model.extender/**/*.java, org.gecko.emf.osgi.example.model.manual/**/*.java, org.gecko.emf.osgi.example.model.basic/**/*.java, org.gecko.emf.osgi.bnd.library/**/*.java, org.gecko.emf.osgi.bnd.library.project/**/*.java, org.gecko.emf.osgi.bnd.templates.project/**/*.java, org.gecko.emf.osgi.codegen/**/templates/model/*.java, org.gecko.emf.osgi.itest/**/*.java, org.gecko.emf.osgi.extender.itest/**/*.java, org.gecko.emf.osgi.codegen/**/*.java"
   }
 }
 
