--- a/org.gecko.emf.osgi/.classpath
+++ b/org.gecko.emf.osgi/.classpath
@@ -8,5 +8,6 @@
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
