Signed-off-by: Mark Hoffmann <m.hoffmann@data-in-motion.biz>

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -54,6 +54,7 @@ header:
     - '.github/**'
     - '.gitignore'
     - 'cnf/release/**.*'
+    - 'cnf/local/**.*'
     - '.gradle-wrapper/gradle-wrapper.properties'
     - '.licenserc.yaml'
     - '**/.project'
